# learn-python

Class1/: index.ipynb
Python Crash Course Notebook/: main.ipynb  task.md
class2/: pyproject.toml
class2/class2/: main.ipynb
class3/: pyproject.toml
class3/class3/: main.py
