[tool.poetry]
name = "class3"
version = "0.1.0"
description = ""
authors = ["Hamza Waheed <137566252+hmzi67@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
